# serializer version: 1
# name: TestClickhouseStickiness.test_aggregate_by_groups
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT countDistinct(aggregation_target),
         num_intervals
  FROM
    (SELECT e."$group_0" AS aggregation_target,
            countDistinct(toStartOfWeek(toTimeZone(toDateTime(timestamp, 'UTC'), 'UTC'), 0)) as num_intervals
     FROM events e
     LEFT OUTER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 99999
          AND distinct_id IN
            (SELECT distinct_id
             FROM events
             WHERE team_id = 99999
               AND event = 'watched movie'
               AND toTimeZone(timestamp, 'UTC') >= toDateTime(toStartOfWeek(toDateTime('2020-01-01 00:00:00', 'UTC'), 0), 'UTC')
               AND toTimeZone(timestamp, 'UTC') <= toDateTime('2020-02-15 23:59:59', 'UTC') )
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     WHERE team_id = 99999
       AND toTimeZone(timestamp, 'UTC') >= toDateTime(toStartOfWeek(toDateTime('2020-01-01 00:00:00', 'UTC'), 0), 'UTC')
       AND toTimeZone(timestamp, 'UTC') <= toDateTime('2020-02-15 23:59:59', 'UTC')
       AND event = 'watched movie'
       AND (NOT has([''], "$group_0"))
     GROUP BY aggregation_target)
  WHERE num_intervals <= 8
  GROUP BY num_intervals
  ORDER BY num_intervals
  '''
# ---
# name: TestClickhouseStickiness.test_aggregate_by_groups.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT aggregation_target AS actor_id
  FROM
    (SELECT e."$group_0" AS aggregation_target,
            countDistinct(toStartOfWeek(toTimeZone(toDateTime(timestamp, 'UTC'), 'UTC'), 0)) as num_intervals
     FROM events e
     LEFT OUTER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 99999
          AND distinct_id IN
            (SELECT distinct_id
             FROM events
             WHERE team_id = 99999
               AND event = 'watched movie'
               AND toTimeZone(timestamp, 'UTC') >= toDateTime(toStartOfWeek(toDateTime('2020-01-01 00:00:00', 'UTC'), 0), 'UTC')
               AND toTimeZone(timestamp, 'UTC') <= toDateTime('2020-02-15 23:59:59', 'UTC') )
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     WHERE team_id = 99999
       AND toTimeZone(timestamp, 'UTC') >= toDateTime(toStartOfWeek(toDateTime('2020-01-01 00:00:00', 'UTC'), 0), 'UTC')
       AND toTimeZone(timestamp, 'UTC') <= toDateTime('2020-02-15 23:59:59', 'UTC')
       AND event = 'watched movie'
       AND (NOT has([''], "$group_0")
            AND NOT has([''], "$group_0"))
     GROUP BY aggregation_target)
  WHERE num_intervals = 1
  LIMIT 100
  OFFSET 0
  '''
# ---
# name: TestClickhouseStickiness.test_aggregate_by_groups.2
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT aggregation_target AS actor_id
  FROM
    (SELECT e."$group_0" AS aggregation_target,
            countDistinct(toStartOfWeek(toTimeZone(toDateTime(timestamp, 'UTC'), 'UTC'), 0)) as num_intervals
     FROM events e
     LEFT OUTER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 99999
          AND distinct_id IN
            (SELECT distinct_id
             FROM events
             WHERE team_id = 99999
               AND event = 'watched movie'
               AND toTimeZone(timestamp, 'UTC') >= toDateTime(toStartOfWeek(toDateTime('2020-01-01 00:00:00', 'UTC'), 0), 'UTC')
               AND toTimeZone(timestamp, 'UTC') <= toDateTime('2020-02-15 23:59:59', 'UTC') )
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     WHERE team_id = 99999
       AND toTimeZone(timestamp, 'UTC') >= toDateTime(toStartOfWeek(toDateTime('2020-01-01 00:00:00', 'UTC'), 0), 'UTC')
       AND toTimeZone(timestamp, 'UTC') <= toDateTime('2020-02-15 23:59:59', 'UTC')
       AND event = 'watched movie'
       AND (NOT has([''], "$group_0")
            AND NOT has([''], "$group_0"))
     GROUP BY aggregation_target)
  WHERE num_intervals = 2
  LIMIT 100
  OFFSET 0
  '''
# ---
# name: TestClickhouseStickiness.test_aggregate_by_groups.3
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT aggregation_target AS actor_id
  FROM
    (SELECT e."$group_0" AS aggregation_target,
            countDistinct(toStartOfWeek(toTimeZone(toDateTime(timestamp, 'UTC'), 'UTC'), 0)) as num_intervals
     FROM events e
     LEFT OUTER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 99999
          AND distinct_id IN
            (SELECT distinct_id
             FROM events
             WHERE team_id = 99999
               AND event = 'watched movie'
               AND toTimeZone(timestamp, 'UTC') >= toDateTime(toStartOfWeek(toDateTime('2020-01-01 00:00:00', 'UTC'), 0), 'UTC')
               AND toTimeZone(timestamp, 'UTC') <= toDateTime('2020-02-15 23:59:59', 'UTC') )
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     WHERE team_id = 99999
       AND toTimeZone(timestamp, 'UTC') >= toDateTime(toStartOfWeek(toDateTime('2020-01-01 00:00:00', 'UTC'), 0), 'UTC')
       AND toTimeZone(timestamp, 'UTC') <= toDateTime('2020-02-15 23:59:59', 'UTC')
       AND event = 'watched movie'
       AND (NOT has([''], "$group_0")
            AND NOT has([''], "$group_0"))
     GROUP BY aggregation_target)
  WHERE num_intervals = 3
  LIMIT 100
  OFFSET 0
  '''
# ---
# name: TestClickhouseStickiness.test_compare
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT countDistinct(aggregation_target),
         num_intervals
  FROM
    (SELECT if(notEmpty(pdi.distinct_id), pdi.person_id, e.person_id) AS aggregation_target,
            countDistinct(toStartOfDay(toTimeZone(toDateTime(timestamp, 'UTC'), 'UTC'))) as num_intervals
     FROM events e
     LEFT OUTER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 99999
          AND distinct_id IN
            (SELECT distinct_id
             FROM events
             WHERE team_id = 99999
               AND event = 'watched movie'
               AND toTimeZone(timestamp, 'UTC') >= toDateTime(toStartOfDay(toDateTime('2020-01-01 00:00:00', 'UTC')), 'UTC')
               AND toTimeZone(timestamp, 'UTC') <= toDateTime('2020-01-08 23:59:59', 'UTC') )
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     WHERE team_id = 99999
       AND toTimeZone(timestamp, 'UTC') >= toDateTime(toStartOfDay(toDateTime('2020-01-01 00:00:00', 'UTC')), 'UTC')
       AND toTimeZone(timestamp, 'UTC') <= toDateTime('2020-01-08 23:59:59', 'UTC')
       AND event = 'watched movie'
     GROUP BY aggregation_target)
  WHERE num_intervals <= 9
  GROUP BY num_intervals
  ORDER BY num_intervals
  '''
# ---
# name: TestClickhouseStickiness.test_compare.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT countDistinct(aggregation_target),
         num_intervals
  FROM
    (SELECT if(notEmpty(pdi.distinct_id), pdi.person_id, e.person_id) AS aggregation_target,
            countDistinct(toStartOfDay(toTimeZone(toDateTime(timestamp, 'UTC'), 'UTC'))) as num_intervals
     FROM events e
     LEFT OUTER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 99999
          AND distinct_id IN
            (SELECT distinct_id
             FROM events
             WHERE team_id = 99999
               AND event = 'watched movie'
               AND toTimeZone(timestamp, 'UTC') >= toDateTime(toStartOfDay(toDateTime('2019-12-24 00:00:00', 'UTC')), 'UTC')
               AND toTimeZone(timestamp, 'UTC') <= toDateTime('2019-12-31 23:59:59', 'UTC') )
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     WHERE team_id = 99999
       AND toTimeZone(timestamp, 'UTC') >= toDateTime(toStartOfDay(toDateTime('2019-12-24 00:00:00', 'UTC')), 'UTC')
       AND toTimeZone(timestamp, 'UTC') <= toDateTime('2019-12-31 23:59:59', 'UTC')
       AND event = 'watched movie'
     GROUP BY aggregation_target)
  WHERE num_intervals <= 9
  GROUP BY num_intervals
  ORDER BY num_intervals
  '''
# ---
# name: TestClickhouseStickiness.test_filter_by_group_properties
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT countDistinct(aggregation_target),
         num_intervals
  FROM
    (SELECT if(notEmpty(pdi.distinct_id), pdi.person_id, e.person_id) AS aggregation_target,
            countDistinct(toStartOfWeek(toTimeZone(toDateTime(timestamp, 'UTC'), 'UTC'), 0)) as num_intervals
     FROM events e
     LEFT OUTER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 99999
          AND distinct_id IN
            (SELECT distinct_id
             FROM events
             WHERE team_id = 99999
               AND event = 'watched movie'
               AND toTimeZone(timestamp, 'UTC') >= toDateTime(toStartOfWeek(toDateTime('2020-01-01 00:00:00', 'UTC'), 0), 'UTC')
               AND toTimeZone(timestamp, 'UTC') <= toDateTime('2020-02-15 23:59:59', 'UTC') )
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     LEFT JOIN
       (SELECT group_key,
               argMax(group_properties, _timestamp) AS group_properties_0
        FROM groups
        WHERE team_id = 99999
          AND group_type_index = 0
        GROUP BY group_key) groups_0 ON "$group_0" == groups_0.group_key
     WHERE team_id = 99999
       AND toTimeZone(timestamp, 'UTC') >= toDateTime(toStartOfWeek(toDateTime('2020-01-01 00:00:00', 'UTC'), 0), 'UTC')
       AND toTimeZone(timestamp, 'UTC') <= toDateTime('2020-02-15 23:59:59', 'UTC')
       AND event = 'watched movie'
       AND (has(['technology'], replaceRegexpAll(JSONExtractRaw(group_properties_0, 'industry'), '^"|"$', '')))
     GROUP BY aggregation_target)
  WHERE num_intervals <= 8
  GROUP BY num_intervals
  ORDER BY num_intervals
  '''
# ---
# name: TestClickhouseStickiness.test_filter_by_group_properties.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT aggregation_target AS actor_id
  FROM
    (SELECT if(notEmpty(pdi.distinct_id), pdi.person_id, e.person_id) AS aggregation_target,
            countDistinct(toStartOfWeek(toTimeZone(toDateTime(timestamp, 'UTC'), 'UTC'), 0)) as num_intervals
     FROM events e
     LEFT OUTER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 99999
          AND distinct_id IN
            (SELECT distinct_id
             FROM events
             WHERE team_id = 99999
               AND event = 'watched movie'
               AND toTimeZone(timestamp, 'UTC') >= toDateTime(toStartOfWeek(toDateTime('2020-01-01 00:00:00', 'UTC'), 0), 'UTC')
               AND toTimeZone(timestamp, 'UTC') <= toDateTime('2020-02-15 23:59:59', 'UTC') )
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     LEFT JOIN
       (SELECT group_key,
               argMax(group_properties, _timestamp) AS group_properties_0
        FROM groups
        WHERE team_id = 99999
          AND group_type_index = 0
        GROUP BY group_key) groups_0 ON "$group_0" == groups_0.group_key
     WHERE team_id = 99999
       AND toTimeZone(timestamp, 'UTC') >= toDateTime(toStartOfWeek(toDateTime('2020-01-01 00:00:00', 'UTC'), 0), 'UTC')
       AND toTimeZone(timestamp, 'UTC') <= toDateTime('2020-02-15 23:59:59', 'UTC')
       AND event = 'watched movie'
       AND (has(['technology'], replaceRegexpAll(JSONExtractRaw(group_properties_0, 'industry'), '^"|"$', '')))
     GROUP BY aggregation_target)
  WHERE num_intervals = 1
  LIMIT 100
  OFFSET 0
  '''
# ---
# name: TestClickhouseStickiness.test_filter_by_group_properties.2
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT aggregation_target AS actor_id
  FROM
    (SELECT if(notEmpty(pdi.distinct_id), pdi.person_id, e.person_id) AS aggregation_target,
            countDistinct(toStartOfWeek(toTimeZone(toDateTime(timestamp, 'UTC'), 'UTC'), 0)) as num_intervals
     FROM events e
     LEFT OUTER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 99999
          AND distinct_id IN
            (SELECT distinct_id
             FROM events
             WHERE team_id = 99999
               AND event = 'watched movie'
               AND toTimeZone(timestamp, 'UTC') >= toDateTime(toStartOfWeek(toDateTime('2020-01-01 00:00:00', 'UTC'), 0), 'UTC')
               AND toTimeZone(timestamp, 'UTC') <= toDateTime('2020-02-15 23:59:59', 'UTC') )
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     LEFT JOIN
       (SELECT group_key,
               argMax(group_properties, _timestamp) AS group_properties_0
        FROM groups
        WHERE team_id = 99999
          AND group_type_index = 0
        GROUP BY group_key) groups_0 ON "$group_0" == groups_0.group_key
     WHERE team_id = 99999
       AND toTimeZone(timestamp, 'UTC') >= toDateTime(toStartOfWeek(toDateTime('2020-01-01 00:00:00', 'UTC'), 0), 'UTC')
       AND toTimeZone(timestamp, 'UTC') <= toDateTime('2020-02-15 23:59:59', 'UTC')
       AND event = 'watched movie'
       AND (has(['technology'], replaceRegexpAll(JSONExtractRaw(group_properties_0, 'industry'), '^"|"$', '')))
     GROUP BY aggregation_target)
  WHERE num_intervals = 2
  LIMIT 100
  OFFSET 0
  '''
# ---
# name: TestClickhouseStickiness.test_filter_by_group_properties.3
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT aggregation_target AS actor_id
  FROM
    (SELECT if(notEmpty(pdi.distinct_id), pdi.person_id, e.person_id) AS aggregation_target,
            countDistinct(toStartOfWeek(toTimeZone(toDateTime(timestamp, 'UTC'), 'UTC'), 0)) as num_intervals
     FROM events e
     LEFT OUTER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 99999
          AND distinct_id IN
            (SELECT distinct_id
             FROM events
             WHERE team_id = 99999
               AND event = 'watched movie'
               AND toTimeZone(timestamp, 'UTC') >= toDateTime(toStartOfWeek(toDateTime('2020-01-01 00:00:00', 'UTC'), 0), 'UTC')
               AND toTimeZone(timestamp, 'UTC') <= toDateTime('2020-02-15 23:59:59', 'UTC') )
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     LEFT JOIN
       (SELECT group_key,
               argMax(group_properties, _timestamp) AS group_properties_0
        FROM groups
        WHERE team_id = 99999
          AND group_type_index = 0
        GROUP BY group_key) groups_0 ON "$group_0" == groups_0.group_key
     WHERE team_id = 99999
       AND toTimeZone(timestamp, 'UTC') >= toDateTime(toStartOfWeek(toDateTime('2020-01-01 00:00:00', 'UTC'), 0), 'UTC')
       AND toTimeZone(timestamp, 'UTC') <= toDateTime('2020-02-15 23:59:59', 'UTC')
       AND event = 'watched movie'
       AND (has(['technology'], replaceRegexpAll(JSONExtractRaw(group_properties_0, 'industry'), '^"|"$', '')))
     GROUP BY aggregation_target)
  WHERE num_intervals = 3
  LIMIT 100
  OFFSET 0
  '''
# ---
